# EdgeDetection

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  EdgeDetectionConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/DrawCorners/: CMakeLists.txt  DrawCorners.cpp  DrawCorners.hpp
src/Components/DrawEdges/: CMakeLists.txt  DrawEdges.cpp  DrawEdges.hpp
src/Components/DrawHarris/: CMakeLists.txt  DrawHarris.cpp  DrawHarris.hpp
src/Components/DrawLines/: CMakeLists.txt  DrawLines.cpp  DrawLines.hpp
src/Components/DrawSomeEdges/: CMakeLists.txt  DrawSomeEdges.cpp  DrawSomeEdges.hpp
src/Components/DrawSystem/: CMakeLists.txt  DrawSystem.cpp  DrawSystem.hpp
src/Components/FindEdges/: CMakeLists.txt  FindEdges.cpp  FindEdges.hpp
src/Components/ReduceEdges/: CMakeLists.txt  ReduceEdges.cpp  ReduceEdges.hpp
src/Types/: Circles.hpp  Edges.hpp  Line.hpp
tasks/: ShowEdges.xml  ShowEdgesCamera.xml  ShowEdgesImage.xml  ShowEdgesImageNoCalib.xml  ShowSomeEdgesImageNoCalib.xml
